fix: solve JDT Null Analysis Mismatch Error